# wordle-autosolver

./: README.md  __init__.py  __main__.py  auto.py  common.py  driver.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  solver.py  tox.ini  wordle_solver.py
.github/workflows/: tests.yml
data/: __init__.py  allowed_words.txt  curated_words.txt  freq_map.json  nar.txt  ncr.txt  remaining_words.txt
tests/: conftest.py  test_auto.py  test_common.py  test_data.py  test_solver.py
tests/integrated/: test_auto.py
wordle_autosolver/: __init__.py  __main__.py  auto.py  common.py  driver.py  solver.py
wordle_autosolver/data/: best_guess.json
