[metadata]
name = wordle-autosolver
version = 0.5.2
license_file = LICENSE
license = GPL-3.0
author = Kody Puebla
author_email = pueblakody@gmail.com
url = https://github.com/pueblak/wordle-solver
keywords = wordle, solver, selenium, chromedriver, dordle, quordle, octordle, duotrigordle, website, automate
description = A Wordle solver that can generate near-optimal decision trees and automatically play on multiple different website including Quordle, Wordzy Master, and Fibble
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent
    Topic :: Games/Entertainment
    Natural Language :: English

[options]
include_package_data = True
package_dir =
    = data
packages = find:
install_requires =
    tqdm
    selenium
python_requires = >=3.9

[options.packages.find]
where = data

[options.package_data]
* = *.json
